<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_claro"
    tools:context=".FormCadastro">

    <ImageView
        android:id="@+id/imageViewbackFormCadastro"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="-30sp"
        android:layout_marginTop="10sp"
        android:contentDescription="@string/voltar1"
        app:layout_constraintStart_toStartOf="@id/title_cadastrese"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_voltar"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/signika_semibold"
        android:text="@string/title_cadastro"
        android:textColor="@color/azul1"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeTextInputLayoutFormCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nome"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrese"
        style="@style/CustomTextInputLayoutLoginRedefinir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_user_name"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:background="@drawable/layout_login_edits"
            app:layout_constraintTop_toBottomOf="@id/title_cadastrese"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coordTextInputLayoutFormCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coord"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/nomeTextInputLayoutFormCadastro"
        style="@style/CustomTextInputLayoutLoginRedefinir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_coord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_coord"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:background="@drawable/layout_login_edits"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayoutFormCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/coordTextInputLayoutFormCadastro"
        style="@style/CustomTextInputLayoutLoginRedefinir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_form_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:background="@drawable/layout_login_edits"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/senhaTextInputLayoutFormCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        app:helperText="@string/obrigatorio"
        app:helperTextTextColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayoutFormCadastro"
        style="@style/CustomTextInputLayoutLoginRedefinir">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_senha_form_cadastro"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:autofillHints="password"
        android:background="@drawable/layout_login_edits"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/visiblepasscadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="13dp"
        android:text="@string/mostrarsenha"
        android:textColor="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="@+id/passwordToggleCheckBoxFormCadastro"
        app:layout_constraintTop_toBottomOf="@id/senhaTextInputLayoutFormCadastro" />

    <CheckBox
        android:id="@+id/passwordToggleCheckBoxFormCadastro"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:button="@drawable/ic_password_toggle_selector"
        android:contentDescription="@string/exibirsenha"
        app:layout_constraintTop_toBottomOf="@id/senhaTextInputLayoutFormCadastro"
        app:layout_constraintStart_toStartOf="@id/senhaTextInputLayoutFormCadastro" />

    <TextView
        android:id="@+id/txt_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="13dp"
        android:text="@string/administrador"
        android:textColor="@color/colorSecondary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/adminToggleCheckBoxFormCadastro"
        app:layout_constraintTop_toBottomOf="@id/senhaTextInputLayoutFormCadastro" />

    <CheckBox
        android:id="@+id/adminToggleCheckBoxFormCadastro"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:button="@drawable/ic_password_toggle_selector"
        android:contentDescription="@string/admin1"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/senhaTextInputLayoutFormCadastro"
        app:layout_constraintEnd_toEndOf="@id/senhaTextInputLayoutFormCadastro" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/Button2"
        android:text="@string/cadastrar"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/passwordToggleCheckBoxFormCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Cadastramento de Administrador
    <TextView
        android:id="@+id/cadastrar_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/administrador"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastrar"
        tools:ignore="TextContrastCheck" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>