<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_escuro"
    tools:context=".Activity_Splash_Form_Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_calendario_eventos"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_esp_eventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/signika_semibold"
        android:text="@string/espeventos"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:orientation="vertical"
        android:layout_marginTop="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emaillogin"
            android:textColorHint="@color/white"
            style="@style/CustomTextInputLayoutLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/layout_login_edits"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senhalogin"
            android:textColorHint="@color/white"
            style="@style/CustomTextInputLayoutLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/layout_login_edits"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/visiblepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrarsenha"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="80dp"
            android:layout_gravity="start"/>

        <CheckBox
            android:id="@+id/passwordToggleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-22dp"
            android:button="@drawable/ic_password_toggle_selector"
            android:contentDescription="@string/exibirsenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/visiblepass" />

        <TextView
            android:id="@+id/text_redefinir_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:fontFamily="@font/signika_light"
            android:text="@string/esqueceusenha"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordToggleCheckBox" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_entrar"
            style="@style/Button"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/signika_light"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_senha" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="-67dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_entrar" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/text_cadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <!-- PROXIMA SPRINT PARA A IMPLEMENTACAO
    <TextView
        android:id="@+id/text_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/text_login_google"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
     -->


</androidx.constraintlayout.widget.ConstraintLayout>
