<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_claro"
    tools:context=".AmbienteEvento">


    <!-- Imagem de Voltar -->
    <ImageView
        android:id="@+id/imageViewback_ext"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:contentDescription="@string/voltar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_voltar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayoutAmbExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_ambiente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/signika_semibold"
            android:text="@string/txtAmbiente"
            android:textColor="@color/azul1"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingConstraints" />

        <!-- Campo de texto de Local-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputtextamb"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/selectAmb"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ambiente">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_amb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColorHint="@color/gray"
                tools:ignore="LabelFor,VisualLintTextFieldSize"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botão do cadastrar evento -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_seguinte"
            style="@style/Button2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/seguinte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputtextamb"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>