<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/layoutDialogContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layoutDialog"
        android:background="@drawable/dialog_background">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTitleAlertDialog"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/sucess_background"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxHoje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoje"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/textTitleAlertDialog"/>

        <CheckBox
            android:id="@+id/checkBox7dias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimos7dias"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/checkBoxHoje"/>

        <CheckBox
            android:id="@+id/checkBox30dias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimos30dias"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/checkBox7dias"/>

        <!-- >
        <CheckBox
            android:id="@+id/checkBoxPersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodopersonalizado"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox30dias"/>
        -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/buttonAction"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_sucess_background"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintTop_toBottomOf="@+id/layoutDialog"
        android:textSize="14sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>